--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-<h1>Hello World<h1>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Responsive Iframe</title>
+    <style>
+        /* CSS untuk membuat iframe responsif */
+        .iframe-container {
+            position: relative;
+            width: 100%;
+            padding-bottom: 56.25%; /* Rasio 16:9 */
+            height: 0;
+            overflow: hidden;
+        }
+        .iframe-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
+    </style>
+</head>
+<body>
+
+    <div class="iframe-container">
+        <iframe src="https://script.google.com/macros/s/AKfycbxROhQ72QFkm0e-UuGcz4R1XSoTUmxtlVmIHc8VFr4R7BqeJPRYoVUozoGof-NJG9ZL7g/exec" allowfullscreen></iframe>
+    </div>
+
+</body>
+</html>
