--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         .iframe-container {
             position: relative;
             width: 100%;
-            padding-bottom: 56.25%; /* Rasio 16:9 */
+            padding-bottom: 0; /* Rasio 16:9 */
             height: 0;
             overflow: hidden;
         }
