--- a/index.html
+++ b/index.html
@@ -5,21 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Iframe</title>
     <style>
-        /* CSS untuk membuat iframe responsif */
+        /* CSS untuk membuat iframe responsif penuh */
         .iframe-container {
-            position: relative;
-            width: 100%;
-            padding-bottom: 0; /* Rasio 16:9 */
-            height: 0;
-            overflow: hidden;
+            width: 100vw;  /* Menggunakan lebar penuh dari layar perangkat */
+            height: 100vh; /* Menggunakan tinggi penuh dari layar perangkat */
+            margin: 0;
+            padding: 0;
+            border: none;
         }
         .iframe-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
             width: 100%;
             height: 100%;
-            border: 0;
+            border: none;
         }
     </style>
 </head>
