--- a/index.html
+++ b/index.html
@@ -3,28 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Iframe</title>
+    <title>Responsive Iframe with Modal</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <style>
-        /* CSS untuk membuat iframe responsif penuh */
+        /* CSS untuk membuat iframe responsif */
         .iframe-container {
-            width: 100vw;  /* Menggunakan lebar penuh dari layar perangkat */
-            height: 100vh; /* Menggunakan tinggi penuh dari layar perangkat */
+            width: 100vw;
+            height: 100vh;
             margin: 0;
             padding: 0;
             border: none;
         }
+
         .iframe-container iframe {
             width: 100%;
             height: 100%;
             border: none;
         }
+
+        /* CSS untuk modal overlay */
+        #loadingModal {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: fixed;
+            z-index: 9999;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            background-color: rgba(0, 0, 0, 0.7); /* Semi-transparent background */
+        }
+
+        /* Spinner loading */
+        .spinner {
+            border: 8px solid #f3f3f3;
+            border-radius: 50%;
+            border-top: 8px solid #3498db;
+            width: 60px;
+            height: 60px;
+            animation: spin 2s linear infinite;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        /* Tombol reload */
+        .reload-btn {
+            display: none;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .reload-btn:hover {
+            background-color: #2980b9;
+        }
+
     </style>
 </head>
 <body>
 
-    <div class="iframe-container">
-        <iframe src="https://script.google.com/macros/s/AKfycbxROhQ72QFkm0e-UuGcz4R1XSoTUmxtlVmIHc8VFr4R7BqeJPRYoVUozoGof-NJG9ZL7g/exec" allowfullscreen></iframe>
+    <!-- Modal Loading -->
+    <div id="loadingModal">
+        <div>
+            <div class="spinner"></div>
+            <button id="reloadButton" class="reload-btn" onclick="reloadPage()">Reload</button>
+        </div>
     </div>
+
+    <!-- Iframe responsif -->
+    <div class="iframe-container">
+        <iframe id="iframeContent" src="https://script.google.com/macros/s/AKfycbxROhQ72QFkm0e-UuGcz4R1XSoTUmxtlVmIHc8VFr4R7BqeJPRYoVUozoGof-NJG9ZL7g/exec" allowfullscreen></iframe>
+    </div>
+
+    <script>
+        // Fungsi untuk reload halaman atau redirect ke google setelah 6 detik
+        function reloadPage() {
+            window.location.href = "https://www.google.com";
+        }
+
+        // Menutup modal ketika iframe dan halaman sudah selesai dimuat
+        window.onload = function() {
+            document.getElementById("loadingModal").style.display = "none";
+        };
+
+        // Jika dalam 6 detik iframe tidak selesai load, tampilkan tombol reload
+        setTimeout(function() {
+            var modal = document.getElementById("loadingModal");
+            if (modal.style.display !== "none") {
+                document.getElementById("reloadButton").style.display = "block";
+            }
+        }, 6000);
+
+    </script>
 
 </body>
 </html>
