edit color modal

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: #006024;
             z-index: 1050;
         }
 
@@ -63,7 +63,7 @@
             </div>
             <div class="loading-text">Sedang Loading Aplikasi...</div>
             <!-- Tombol Reload -->
-            <button id="reloadButton" class="btn btn-warning">Reload</button>
+            <button id="reloadButton" class="btn btn-warning">Segarkan Halaman</button>
         </div>
     </div>
 
