update url santri

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             const reloadButton = document.getElementById('reloadButton');
             reloadButton.style.display = 'block';
             reloadButton.addEventListener('click', function() {
-                window.location.href = 'https://google.com';  // Arahkan ke Google setelah klik Reload
+                window.location.href = 'https://santri.alfurqon.or.id';  // Arahkan ke Google setelah klik Reload
             });
         }
 
